src/test/ui/parser/issues/issue-87086-colon-path-sep.stderr
error: expected one of `@` or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:17:12
   |
LL |         Foo:Bar => {}
   |            ^
   |            |
   |            expected one of `@` or `|`
   |            help: maybe write a path separator here: `::`

error: expected one of `!`, `(`, `...`, `..=`, `..`, `::`, `{`, or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:23:17
   |
LL |         qux::Foo:Bar => {}
   |                 ^
   |                 |
   |                 expected one of 8 possible tokens
   |                 help: maybe write a path separator here: `::`

error: expected one of `@` or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:29:12
   |
LL |         qux:Foo::Baz => {}
   |            ^
   |            |
   |            expected one of `@` or `|`
   |            help: maybe write a path separator here: `::`

error: expected one of `@` or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:35:12
   |
LL |         qux: Foo::Baz if true => {}
   |            ^
   |            |
   |            expected one of `@` or `|`
   |            help: maybe write a path separator here: `::`

error: expected one of `@` or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:40:15
   |
LL |     if let Foo:Bar = f() {
   |               ^
   |               |
   |               expected one of `@` or `|`
   |               help: maybe write a path separator here: `::`

error: expected one of `@` or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:48:16
   |
LL |         ref qux: Foo::Baz => {}
   |                ^
   |                |
   |                expected one of `@` or `|`
   |                help: maybe write a path separator here: `::`

error: expected one of `@` or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:57:16
   |
LL |         mut qux: Foo::Baz => {}
   |                ^
   |                |
   |                expected one of `@` or `|`
   |                help: maybe write a path separator here: `::`

error: expected one of `@` or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:68:12
   |
LL |         Foo:Bar::Baz => {}
   |            ^
   |            |
   |            expected one of `@` or `|`
   |            help: maybe write a path separator here: `::`

error: expected one of `@` or `|`, found `:`
  --> $DIR/issue-87086-colon-path-sep.rs:75:12
   |
LL |         Foo:Bar => {}
   |            ^
   |            |
   |            expected one of `@` or `|`
   |            help: maybe write a path separator here: `::`

error[E0433]: failed to resolve: `Bar` is a variant, not a module
  --> $DIR/issue-87086-colon-path-sep.rs:68:13
   |
LL |         Foo:Bar::Baz => {}
   |             ^^^ `Bar` is a variant, not a module

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0433`.
